--- a/src/frontend/src/app/app.component.css
+++ b/src/frontend/src/app/app.component.css
@@ -10,10 +10,6 @@
     line-height: 64px;
 }
 
-nz-breadcrumb {
-    margin: 16px 0;
-}
-
 nz-content {
     padding: 0 50px;
 }
@@ -26,4 +22,5 @@ nz-footer {
     background: #fff;
     padding: 24px;
     min-height: 280px;
+    margin-top:24px
 }
