--- a/src/frontend/src/app/pages/cluster.component.html
+++ b/src/frontend/src/app/pages/cluster.component.html
@@ -1,4 +1,4 @@
-<nz-page-header (nzBack)="onBack()" nzBackIcon nzTitle="Cluster Status" nzSubtitle="show cluster members"> </nz-page-header>
+<!-- <nz-page-header (nzBack)="onBack()" nzBackIcon nzTitle="Cluster Status" nzSubtitle="show cluster members"> </nz-page-header> -->
 <nz-skeleton [nzActive]="true" [nzLoading]="loading">
   <div nz-row [nzGutter]="8">
     <div nz-col [nzSpan]="8" *ngFor="let member of clusters">
