--- a/src/frontend/src/app/pages/kv.component.html
+++ b/src/frontend/src/app/pages/kv.component.html
@@ -1,33 +1,55 @@
-<nz-page-header (nzBack)="onBack()" nzBackIcon nzTitle="KVs" nzSubtitle="You can manage KVs"> </nz-page-header>
-<button nz-button nzType="primary" (click)="CreateUser()" class="head-action">
+<button nz-button nzType="primary" (click)="CreateKV()" class="head-action">
   <i nz-icon nzType="user-add" nzTheme="outline"></i>Add Config
 </button>
 
-<nz-list class="demo-loadmore-list" [nzDataSource]="kvs" [nzItemLayout]="'horizontal'" [nzLoading]="loading"
+<nz-list [nzDataSource]="kvs" [nzItemLayout]="'horizontal'" [nzLoading]="loading"
   [nzRenderItem]="item" >
   <ng-template #item let-item >
     <nz-list-item [nzActions]="[editAction, moreAction]" >
       <nz-skeleton [nzAvatar]="true" [nzActive]="true" [nzTitle]="false" [nzLoading]="loading">
-        <ng-template #titleTemplate><h3>{{item.key}}</h3></ng-template>
-        <ng-template #moreAction><a nz-popconfirm nzPopconfirmTitle="Are you sure remove this key?"
-            (onConfirm)="RemoveKey(item)">delete</a></ng-template>
+        <ng-template #titleTemplate>
+          <h3 *ngIf="item.type==1"><a [routerLink]="['.',{prefix:prefixKey+item.name}]">{{item.name}}</a></h3>
+          <h3 *ngIf="item.type==0">{{item.name}}</h3>
+        </ng-template>
+        <ng-template #moreAction>
+          <a nz-popconfirm nzPopconfirmTitle="Are you sure remove this key?" (nzOnConfirm)="RemoveKey(item.name)">delete</a>
+        </ng-template>
+        <ng-template #editAction>
+          <a (click)="ModifyKV(item.name)" *ngIf="item.type==0">Edit</a></ng-template>
         <ng-template #avatarTemplate>
-          <nz-avatar nzIcon="file-text"></nz-avatar>
+          <nz-avatar nzIcon="file-text" *ngIf="item.type==0"></nz-avatar>
+          <nz-avatar nzIcon="folder" *ngIf="item.type==1"></nz-avatar>
         </ng-template>
-        <ng-template #detailTemplate>
-            <p
-            nz-paragraph
-            nzEllipsis
-            nzEditable
-            [nzEllipsisRows]="2"
-            [nzContent]="item.value"
-            (nzContentChange)="onChange($event)"
-            class="kv-content"
-          ></p>
-        </ng-template>
-        <nz-list-item-meta [nzTitle]="titleTemplate" [nzAvatar]="avatarTemplate" [nzDescription]="detailTemplate">
+        <nz-list-item-meta [nzTitle]="titleTemplate" [nzAvatar]="avatarTemplate">
         </nz-list-item-meta>
       </nz-skeleton>
     </nz-list-item>
   </ng-template>
 </nz-list>
+<nz-modal [(nzVisible)]="isVisible" nzTitle="KV Modification" (nzOnCancel)="handleCancel()" (nzOnOk)="handleOk()"
+  [nzOkLoading]="isOkLoading">
+  <form nz-form [formGroup]="validateForm" class="login-form">
+    <nz-form-item>
+      <span class="error">{{errors}}</span>
+    </nz-form-item>
+    <nz-form-item>
+      <nz-form-control nzErrorTip="key required">
+        <nz-input-group [nzAddOnBefore]="prefixKey">
+          <input type="text" nz-input formControlName="keyName" placeholder="keyName" (keyup)="onChangeKey($event)">
+        </nz-input-group>
+      </nz-form-control>
+    </nz-form-item>
+    <nz-form-item>
+      <nz-form-control >
+        <textarea  rows="4" nz-input formControlName="content" placeholder="content"></textarea>
+      </nz-form-control>
+    </nz-form-item>
+    <nz-form-item>
+        <nz-form-control >
+          <nz-input-group [nzAddOnBeforeIcon]="'clock-circle'">
+            <input type="number" nz-input formControlName="ttl" placeholder="" >
+          </nz-input-group>
+        </nz-form-control>
+      </nz-form-item>
+  </form>
+</nz-modal>
