--- a/src/frontend/src/app/app.component.css
+++ b/src/frontend/src/app/app.component.css
@@ -1,30 +1,43 @@
 .logo {
-    width: 120px;
-    height: 31px;
-    background: rgba(255, 255, 255, 0.2);
-    margin: 16px 24px 16px 0;
-    float: left;
+  width: 120px;
+  height: 31px;
+  /* background: rgba(255, 255, 255, 0.2); */
+  margin: 16px 24px 16px 0;
+  float: left;
+  line-height: 31px;
+  background: url(../assets/etcd.svg);
+
+  background-size: contain;
+
+  background-repeat: no-repeat;
+
+  text-indent: -40px;
+
+  overflow: hidden;
 }
 
 [nz-menu] {
-    line-height: 64px;
+  line-height: 64px;
 }
 
 nz-breadcrumb {
-    margin: 16px 0;
+  margin: 16px 0;
 }
 
 nz-content {
-    padding: 0 50px;
+  padding: 0 50px;
 }
 
 nz-footer {
-    text-align: center;
+  text-align: center;
 }
 
 .inner-content {
-    background: #fff;
-    padding: 24px;
-    min-height: 280px;
-    margin-top:24px
+  background: #fff;
+  padding: 24px;
+  min-height: 540px;
+  margin-top: 24px
+}
+.ant-layout-header{
+    background:#fff;
 }
