--- a/src/frontend/src/app/pages/role.component.html
+++ b/src/frontend/src/app/pages/role.component.html
@@ -1,7 +1,12 @@
 <!-- <nz-page-header (nzBack)="onBack()" nzBackIcon nzTitle="Roles" nzSubtitle="You can manage roles"> </nz-page-header> -->
-<button nz-button nzType="primary" (click)="CreateRole()" class="head-action">
+<button nz-button nzType="primary" (click)="CreateRole()" class="head-action" *ngIf="!PermissionDenied">
     <i nz-icon nzType="usergroup-add" nzTheme="outline"></i>Create Role
 </button>
+<nz-result nzStatus="403" nzTitle="403" nzSubTitle="Sorry, you are not authorized to access this page." *ngIf="PermissionDenied">
+  <div nz-result-extra>
+    <button nz-button nzType="primary" [routerLink]="['/status']">back</button>
+  </div>
+</nz-result>
 <nz-skeleton [nzActive]="true" [nzLoading]="loading">
   <div nz-row [nzGutter]="20">
     <ng-container *ngFor="let role of roles">
